3er commit Completado Se edito la pagina con algunas cosas como el link del repositorio del estudiante y se tradujo algunas de las cosas en el sitio web.

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Politicas de Privacidad";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Usa esta pagina para explicar los las politicas de privacidad de tu sitio web.</p>
